--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: install deps
-        run: pip install -r requirements-tests.txt
+        run: |
+          pip install -r requirements-tests.txt
+          pip install --editable .
       - name: run tests
         run: pytest -vv test
